Fix pointer by shifting to right & adjust colors

--- a/frontend/src/css/general.css
+++ b/frontend/src/css/general.css
@@ -115,6 +115,7 @@
 .pointer {
   position: absolute;
   top: -10px;
+  transform: translateX(-50%); /* Centers the pointer horizontally */
   width: 0;
   height: 0;
   border-left: 5px solid transparent;
